[project]
name = "codd-street-graph-backend"
version = "1.0.0"
description = "Backend for street graph optimization tool"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.4",
    "greenlet>=3.1.1",
    "sqlalchemy>=2.0.36",
]


[tool.ruff]
line-length = 100
